--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
+    "firebase": "^10.13.2",
     "unplugin-vue-components": "^0.27.4",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
