--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
     "firebase": "^10.13.2",
+    "swiper": "^11.1.14",
     "unplugin-vue-components": "^0.27.4",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
